gcc/testsuite/c-c++-common/cilk-plus/CK/sync_wo_spawn.c
/* { dg-do compile } */
/* { dg-options "-fcilkplus" } */

int main (void)
{
  _Cilk_sync; /* { dg-error "expected '_Cilk_spawn' before '_Cilk_sync'" } */
  return 0;
}

